ヘッダにlinear-gradientを設定し立体感を表現。

--- a/app/views/redmine_farend_support/hooks/_view_layouts_base_html_head.html.erb
+++ b/app/views/redmine_farend_support/hooks/_view_layouts_base_html_head.html.erb
@@ -1,5 +1,6 @@
 <style>
 #header {
-  background-color: #6285d9;
+  background: #6285d9;
+  background: linear-gradient(#6285d9, #4a67c0);
 }
 </style>
