ガイダンス表示を目立たせるためにスタイルを設定。

--- a/app/views/redmine_farend_support/hooks/_view_layouts_base_html_head.html.erb
+++ b/app/views/redmine_farend_support/hooks/_view_layouts_base_html_head.html.erb
@@ -1,6 +1,1 @@
-<style>
-#header {
-  background: #6285d9;
-  background: linear-gradient(#6285d9, #4a67c0);
-}
-</style>
+<%= stylesheet_link_tag 'style', :plugin => 'redmine_farend_support' %>
