--- a/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_new.html.erb
+++ b/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_new.html.erb
@@ -1,3 +1,3 @@
 <script>
-  $("#issue-form").before("<p>お問い合わせの内容を入力して「作成」ボタンをクリックしてください。サポート担当者に送信されます。<br>ご対応状況は「チケット」画面で確認できるほか、何か進展があるたびにメールが届きます。</p><p><strong>複数のご質問は一つのチケットに詰め込まずそれぞれ別のチケットを作成してください。</strong> お問い合わせとご回答の対応関係が分かりやすくなることに加え、お調べするのに時間がかからないものは先にご回答できますのでお待たせする時間が短くなります。</p>");
+  $("#issue-form").before("<div class='support-guidance'>お問い合わせの内容を入力して <strong>作成</strong> ボタンをクリックしてください。<br>ご対応状況は <strong>チケット</strong> 画面で確認できるほか、何か進展があるたびにメールも届きます。</div><div class='support-guidance'><strong>複数のご質問は一つのチケットに詰め込まずそれぞれ別のチケットを作成してください。</strong><br>お問い合わせとご回答の対応関係が分かりやすくなります。また、すぐ回答できるものから順次ご回答できますのでお待たせする時間が短くなります。</div>");
 </script>
