--- a/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_show.html.erb
+++ b/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_show.html.erb
@@ -1,3 +1,3 @@
 <script>
-  $(".issue.details").before("<p>お問い合わせいただいた内容と、それに対するやりとりの履歴です。<br>右上の「編集」を追加するとコメントを追加できます。追加されたコメントはサポート担当者に送信されます。</p>");
+  $(".issue.details").before("<div class='support-guidance'>お問い合わせいただいた内容と、それに対するやりとりの履歴です。<br>右上の <strong>編集</strong> をクリックするとコメントを追加できます。コメントはサポート担当者に送信されます。</div>");
 </script>
