--- a/app/views/redmine_farend_support/hooks/_view_account_login_bottom.html.erb
+++ b/app/views/redmine_farend_support/hooks/_view_account_login_bottom.html.erb
@@ -1,6 +1,5 @@
-<p style='text-align: center;'>
-  本システムのユーザーアカウントをお持ちで無い方は <a href='account/register/'><strong>登録</strong></a> をお願いします(所要時間 約1分)。
-</p>
-<p style='text-align: center;'>
-  お問い合わせの送信、対応状況の確認、お問い合わせ履歴の記録・参照 ができるようになります。
-</p>
+<div class="support-guidance-login">
+  <p>初めてお問い合わせいただく方は <a href='account/register/'><strong>登録</strong></a> をお願いします (所要時間 約1分)。<p>
+  <p><a href='account/register/'><button type="button"><span >アカウント登録画面を表示</span></button></a></p>
+  <p>登録後はお問い合わせの送信や対応状況の確認ができるようになります。</p>
+</div>
