--- a/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_index.html.erb
+++ b/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_index.html.erb
@@ -1,3 +1,3 @@
 <script>
-  $("#query_form").before("<div class='support-guidance'>お問い合わせいただいた案件の一覧です。<br>各案件の詳細を見るには題名をクリックしてください。過去案件を表示するには、 <strong>ステータス</strong> で <strong>すべて</strong> を選択してから <strong>適用</strong> をクリックしてください。</div>");
+  $("#query_form").before("<div class='support-guidance'>ご関係する案件の一覧です。<br>各案件の詳細を見るには題名をクリックしてください。過去案件を表示するには、 <strong>ステータス</strong> で <strong>すべて</strong> を選択してから <strong>適用</strong> をクリックしてください。</div>");
 </script>
