ログインの画面の文言の修正

--- a/app/views/redmine_farend_support/hooks/_view_account_login_bottom.html.erb
+++ b/app/views/redmine_farend_support/hooks/_view_account_login_bottom.html.erb
@@ -1,5 +1,5 @@
 <div class="support-guidance-login">
   <p>初めて投稿・査読いただく方は <a href='account/register/'><strong>登録</strong></a> をお願いします (所要時間 約1分)。<p>
   <p><a href='account/register/'><button type="button"><span >アカウント登録画面を表示</span></button></a></p>
-  <p>登録後はお問い合わせの送信や対応状況の確認ができるようになります。</p>
+  <p>登録後は論文の投稿や対応状況の確認ができるようになります。</p>
 </div>
