新規投稿時に再投稿時のメッセージを追加

--- a/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_new.html.erb
+++ b/app/views/redmine_farend_support/hooks/view_layouts_base_body_bottom/issues/_new.html.erb
@@ -1,3 +1,3 @@
 <script>
-  $("#issue-form").before("<div class='support-guidance'>投稿の内容を入力して <strong>作成</strong> ボタンをクリックしてください。<br>ご対応状況は <strong>チケット</strong> 画面で確認できるほか、何か進展があるたびにメールも届きます。</div><div class='support-guidance'><strong>複数のご質問は一つのチケットに詰め込まずそれぞれ別のチケットを作成してください。</strong><br>お問い合わせとご回答の対応関係が分かりやすくなります。また、すぐ回答できるものから順次ご回答できますのでお待たせする時間が短くなります。</div>");
+  $("#issue-form").before("<div class='support-guidance'>投稿の内容を入力して <strong>作成</strong> ボタンをクリックしてください。<br>ご対応状況は <strong>チケット</strong> 画面で確認できるほか、何か進展があるたびにメールも届きます。<br>題名に論文タイトルを入力し、他の項目もご記入ください。再投稿時も新たにチケットの作成をお願いします</div><div class='support-guidance'><strong>複数のご質問は一つのチケットに詰め込まずそれぞれ別のチケットを作成してください。</strong><br>お問い合わせとご回答の対応関係が分かりやすくなります。また、すぐ回答できるものから順次ご回答できますのでお待たせする時間が短くなります。</div>");
 </script>
